multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rahul-pod
spec:
  containers:
  - name: rahul-veg
    image: rahuldutta0487/vegetable-order:v1.0.0
    ports:
      - containerPort: 3000
 
  containers:
  - name: nginx-cont
    image: nginx
    ports:
      - containerPort: 80
