deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata: 
#   name: nginx
#   labels: 
#     first: app
# spec: # BEHAVIOUR OF THE REPLICASET
#   replicas: 3
#   selector: 
#     matchLabels: 
#       app: web
#   template: 
#     metadata: 
#       labels:
#         app: web
#     spec: # BEHAVIOUR OF THE POD
#       containers: 
#         - name: rahul-container
#           image: nginx
#           ports: 
#             - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-service 
# spec:
#   selector: 
#     app: web
#   ports:
#     - protocol: TCP
#       port: 89 
#       targetPort: 80
#   type: ClusterIP                        

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    first: app

spec: #Behavior of the replicaset
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec: # spec & behavior of the pod
      containers:
        - name: nginx-cont
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: loc
          image: sahilahmed0029/loc:v1.0.0
          ports:
            - containerPort: 5000
        - name: vegetable
          image: sahilahmed0029/vegetable:v1.0.0 
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 85
      targetPort: 80
  type: ClusterIP
