gateway1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: rahul-gateway
  namespace: rahul-ns

spec:
  gatewayClassName: envoy-gateway-class

  listeners:
    - name: http
      port: 80
      protocol: HTTP

      allowedRoutes:
        namespaces:
          from: Same
