ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rahul-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathtype: prefix
          backend:
            service:
              name: fitness-service
              port:
                number: 5000
